--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
   background: linear-gradient(to right, #021B79, #0575E6);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
-  font-size: calc(10px + 2vmin);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -29,4 +28,27 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+/* Button Style */
+.btn {
+  background-color: #0525E6;
+  color: #fff;
+  padding: 0 46px;
+  border: 2px solid #fff;
+  border-radius: 25px;
+  height: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: .4s;
+}
+
+.btn:hover {
+  background-color: #0575E6;
+}
+
+.btn:active {
+  background-color:#0707b2;
 }
