--- a/src/components/css/StartScreen.css
+++ b/src/components/css/StartScreen.css
@@ -1,8 +1,9 @@
-.start-screen__title {
+.start-screen .heading_title {
     font-size: 3.5em;
 }
 
-.start-screen__text {
-    font-size: 2em;
-    color: #ecfa00
+.start-screen .heading_subtitle {
+    color: #ecfa00;
+    font-size: 1.5em;
+    margin-bottom: 100px;
 }
