--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,25 @@ code {
     monospace;
 }
 
+/* Colors */
+.color-1 {
+  color: #0575E6;
+}
+
+.color-2 {
+  color: #ecfa00;
+}
+
+/* Flex-Box */
 .flex-column-c {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-row-c {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -47,6 +63,11 @@ code {
 
 .btn:hover {
   background-color: #0575E6;
+}
+
+.btn:focus {
+  border: 2px solid #0575E6;
+  opacity: 0.9;
 }
 
 .btn:active {
