game logic finished

--- a/src/childs/css/SecretWord.css
+++ b/src/childs/css/SecretWord.css
@@ -10,8 +10,9 @@
     font-weight: bold;
 }
 
-.secret-word__score {
-    margin-right: 1em;
+.secret-word__score,
+.secret-word__points {
+    margin-right: 15px;
 }
 
 .secret-word__letters {
