--- a/src/childs/css/AppHeading.css
+++ b/src/childs/css/AppHeading.css
@@ -1,7 +1,11 @@
-.heading_title {
-    font-size: 2.5em;
+.heading__title {
+    font-size: 50px;
 }
 
-.heading_subtitle {
-    font-size: 1.3em;
+.heading__subtitle {
+    font-size: 20px;
+}
+
+.heading__highlighted-word {
+    color: #ecfa00;
 }
