--- a/src/components/css/StartScreen.css
+++ b/src/components/css/StartScreen.css
@@ -1,9 +1,3 @@
-.start-screen .heading_title {
-    font-size: 3.5em;
-}
-
-.start-screen .heading_subtitle {
-    color: #ecfa00;
-    font-size: 1.5em;
-    margin-bottom: 100px;
+.start-screen .btn {
+    margin: 0 10px;
 }
