adjusting style and JSX elements

--- a/src/childs/css/SecretWord.css
+++ b/src/childs/css/SecretWord.css
@@ -1,8 +1,10 @@
 .secret-word {
-    margin: 2.5em 0;
-    padding: 1em;
-    padding-bottom: 2em;
-    border: 20px solid #ecfa00;
+    --mask: radial-gradient(25px at 25px 25px, #0000 98%, #000) -25px -25px;
+    -webkit-mask: radial-gradient(25px at 25px 25px, #0000 98%, #000) -25px -25px;
+    mask: radial-gradient(25px at 25px 25px, #0000 98%, #000) -25px -25px;
+    border: 25px solid #ecfa00;
+    margin: 40px 0; 
+    padding: 20px 15px 50px 15px;
 }
 
 .secret-word__display {
