--- a/src/childs/css/WrongWords.css
+++ b/src/childs/css/WrongWords.css
@@ -1,3 +1,7 @@
-.wrong-words {
-    margin-top: 30px;
+.wrong-words__text {
+    margin: 30px 0 0 0;
+}
+
+.wrong-words__letters {
+    font-size: 18px;
 }
