tweaks to component styles due to reset-css

--- a/src/childs/css/AppHeading.css
+++ b/src/childs/css/AppHeading.css
@@ -1,9 +1,11 @@
 .heading__title {
     font-size: 28px;
+    margin: 20px 0;
 }
 
 .heading__subtitle {
     font-size: 18px;
+    margin: 20px 0;
 }
 
 .heading__highlighted-word {
