--- a/src/childs/css/SecretWord.css
+++ b/src/childs/css/SecretWord.css
@@ -4,17 +4,19 @@
     mask: radial-gradient(25px at 25px 25px, #0000 98%, #000) -25px -25px;
     border: 25px solid #ecfa00;
     margin: 40px 0; 
-    padding: 20px 15px 50px 15px;
+    padding: 20px 60px 50px 60px;
+    min-width: 480px;
 }
 
 .secret-word__display {
     text-align: center;
     font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .secret-word__score,
 .secret-word__points {
-    margin-right: 15px;
+    margin-right: 20px;
 }
 
 .secret-word__letters {
