--- a/src/childs/css/PopUp.css
+++ b/src/childs/css/PopUp.css
@@ -4,27 +4,33 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    padding: 0px;
     background-color: rgba(0, 0, 0, 0.4);
     transition: .4s;
+}
+
+.pop-up .pop-up__title {
+    font-size: 18px;
+    margin-bottom: 15px;
 }
 
 .pop-up__inner {
     position: relative;
     padding: 32px;
-    width: 300px;
-    height: 115px;
+    width: 320px;
+    height: 160px;
     max-width: 640px;
     border-radius: 10px;
 }
 
 .pop-up__inner .btn {
     position: absolute;
-    right: 15px;
+    right: 30px;
     bottom: 15px;
     padding: 0 15px;
     border: none;
     height: 28px;
-    font-size: 0.8em;
+    font-size: 10px;
 }
 
 .pop-up__victory {
@@ -36,7 +42,7 @@
 
 .pop-up__defeat {
     background: #696969;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4A569D, #696969);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4A569D, #696969); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #836FFF, #696969);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #836FFF, #696969); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border: 2px solid #333;
 }
