--- a/src/components/css/GameOver.css
+++ b/src/components/css/GameOver.css
@@ -1,3 +1,7 @@
+.game-over .heading {
+    padding-top: 100px;
+}
+
 .game-over .heading__title {
     font-size: 130px;
 	font-family: 'Black Ops One', cursive;
@@ -9,5 +13,9 @@
 
 .game-over .heading__subtitle {
     font-size: 40px;
-    margin-bottom: 50px;
+    margin-top: 50px;
+}
+
+.game-over .btn {
+    margin-top: 70px;
 }
